--- a/Multi_Thread/Project1/Project1.vcxproj.filters
+++ b/Multi_Thread/Project1/Project1.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="STD_LF_SET.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="FULL_STACK.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
