--- a/Multi_Thread/Project1/Project1.vcxproj.filters
+++ b/Multi_Thread/Project1/Project1.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="FULL_STACK.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LF_BO_STACK.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
